--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ body {
     text-decoration: none;
     font-size: 18px;
   }
+
+
+  .social-icons a img {
+    width: 50px;
+    height: 50px;
+  }
   
   .hero-section {
     display: flex;
