--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,18 @@ body {
     border-radius: 50%;
     border: 3px solid #333;
   }
+.hero-image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.social-icons {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
   
   .brands {
     text-align: center;
